package com.pos.item;
public interface Observer {
    String update();
}